# cfd_lite

./: .gitignore  README.md  cfd_solver_interface.py  cfd_solver_interface_debug.py  integration_test.py  pyproject.toml
cfd_cuda_lib/: build.py  cu.py  solver_io.py  test_gs.py  utility.cu  utility.py  utility_cu.py
cfd_lib/: advection_velocity.py  ap.py  cfd_constants.py  diffusion_pressure.py  io.py  linear_solvers.py  p_v_coupling.py  preprocess.py  residuals.py  resistance.py  solve.py  solver_io.py  velocity_bc.py
cuda_lib_io/: README.md  pyproject.toml  tmp.py
cuda_lib_io/dense_matrix/: cuBLAS_lu.py  cuInversion.py  cuJacobi.py  cuSolver_lu.py  two_methods_compare.py
cuda_lib_io/sparse_matrix/GLU_public-master/include/: symbolic.h
cuda_lib_io/sparse_matrix/GLU_public-master/src/: lu_cmd  lu_cmd.cpp  symbolic.cc
cuda_lib_io/sparse_matrix/GLU_public-master/src/nicslu/demo/: demop  demop_time  demos  demos_time  test
cuda_lib_io/sparse_matrix_examples/: cfd_reader.py  example.py  format.py  verify.py
docs/: input_sample.json
expected_results/: wind_tunnel_with_hole.json
reference_projects/: wind_tunnel_with_hole.json  wind_tunnel_with_resistance.json
