[tool.poetry]
name = "cfd_lite"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"
pycuda = "^2022.1"
matplotlib = "^3.5"
pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
