[tool.poetry]
name = "parallelize_inverse"
version = "0.1.0"
description = ""
authors = ["SESA461392 <Wei.Tian@se.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19"
pycuda = "^2018"
scikit-cuda = "^0.5.3"
six = "^1.16.0"
scipy = "^1.1"
pyopencl = "^2018"
munch = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
